Bug 870902 - [MMS] [UX] Compose: Contacts suggestions has a wrong font. Should be the one designed for our OS.

--- a/apps/sms/style/custom_dialog.css
+++ b/apps/sms/style/custom_dialog.css
@@ -45,7 +45,7 @@ body[role="application"] [role="dialog"]:not([data-type="edit"]) h3 {
   border-bottom: 0.1rem solid #686868;
   color: #FFFFFF;
   font-size: 1.6rem;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1em;
   margin: 0 0 1rem;
   padding-bottom: 1rem;
